[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://assets/Scene5.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Actor/Tree.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Dungeon7.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/Actor/Rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Levels.gd" type="Script" id=8]
[ext_resource path="res://src/Actor/Grass.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/wood_ground.jpg" type="Texture" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 78, 0, 78, 76, 0, 76 )

[sub_resource type="TileSet" id=2]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1, 1, 78, 76 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "ToDay"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.454902, 0.454902, 0.454902, 1 ), Color( 1, 0.772549, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.3, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.772549, 0, 1 ), Color( 0.454902, 0.454902, 0.454902, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 784, 669 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 458, 131 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 935, 133 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 282, 255 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 58, 32 )

[node name="LevelTemplete" type="Node2D"]
position = Vector2( 27, 107 )
script = ExtResource( 8 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 1036, 972 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="wood_ground" type="Sprite" parent="."]
position = Vector2( 12746, 2164 )
scale = Vector2( 0.576875, 0.558359 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
collision_layer = 8
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, 0, 0, 0, 31, 0, 0, 65536, 0, 0, 65567, 0, 0, 131072, 0, 0, 131103, 0, 0, 196608, 0, 0, 196639, 0, 0, 262144, 0, 0, 262175, 0, 0, 327680, 0, 0, 327711, 0, 0, 393216, 0, 0, 393247, 0, 0, 458752, 0, 0, 458783, 0, 0, 524288, 0, 0, 524319, 0, 0, 589824, 0, 0, 589855, 0, 0, 655360, 0, 0, 655391, 0, 0, 720896, 0, 0, 720927, 0, 0, 786432, 0, 0, 786463, 0, 0, 851968, 0, 0, 851999, 0, 0, 917504, 0, 0, 917535, 0, 0, 983040, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114143, 0, 0, 1179648, 0, 0, 1179679, 0, 0, 1245184, 0, 0, 1245215, 0, 0, 1310720, 0, 0, 1310751, 0, 0, 1376256, 0, 0, 1376287, 0, 0, 1441792, 0, 0, 1441823, 0, 0, 1507328, 0, 0, 1507359, 0, 0, 1572864, 0, 0, 1572895, 0, 0, 1638400, 0, 0, 1638431, 0, 0, 1703936, 0, 0, 1703967, 0, 0, 1769472, 0, 0, 1769503, 0, 0, 1835008, 0, 0, 1835039, 0, 0, 1835201, 0, 0, 1835202, 0, 0, 1835203, 0, 0, 1835204, 0, 0, 1835205, 0, 0, 1835206, 0, 0, 1835207, 0, 0, 1835208, 0, 0, 1835209, 0, 0, 1835210, 0, 0, 1835211, 0, 0, 1835212, 0, 0, 1900544, 0, 0, 1900575, 0, 0, 1900737, 0, 0, 1900748, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966273, 0, 0, 1966284, 0, 0, 2031809, 0, 0, 2031820, 0, 0, 2097345, 0, 0, 2097356, 0, 0, 2162881, 0, 0, 2162892, 0, 0, 2228417, 0, 0, 2228428, 0, 0, 2293953, 0, 0, 2293964, 0, 0, 2359489, 0, 0, 2359500, 0, 0, 2425025, 0, 0, 2425036, 0, 0, 2490561, 0, 0, 2490562, 0, 0, 2490563, 0, 0, 2490564, 0, 0, 2490565, 0, 0, 2490568, 0, 0, 2490569, 0, 0, 2490570, 0, 0, 2490571, 0, 0, 2490572, 0, 0, 2556101, 0, 0, 2556102, 0, 0, 2556103, 0, 0, 2556104, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1022, 969 )
collision_mask = 26

[node name="MusicNight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[node name="MusicDay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0
autoplay = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="day_night" type="AnimationPlayer" parent="."]
anims/ToDay = SubResource( 3 )
anims/ToNight = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Tree" parent="." instance=ExtResource( 5 )]
position = Vector2( 1061, 571 )

[node name="Tree2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1200, 577 )

[node name="Tree3" parent="." instance=ExtResource( 5 )]
position = Vector2( 894, 554 )

[node name="Tree4" parent="." instance=ExtResource( 5 )]
position = Vector2( 793, 627 )

[node name="Tree5" parent="." instance=ExtResource( 5 )]
position = Vector2( 1025, 675 )

[node name="Tree6" parent="." instance=ExtResource( 5 )]
position = Vector2( 1192, 694 )

[node name="Tree7" parent="." instance=ExtResource( 5 )]
position = Vector2( 895, 715 )

[node name="Rock" parent="." instance=ExtResource( 7 )]
position = Vector2( 367, 1332 )

[node name="Rock2" parent="." instance=ExtResource( 7 )]
position = Vector2( 278, 1110 )

[node name="Rock3" parent="." instance=ExtResource( 7 )]
position = Vector2( 386, 873 )

[node name="Rock4" parent="." instance=ExtResource( 7 )]
position = Vector2( 679, 965 )

[node name="Rock5" parent="." instance=ExtResource( 7 )]
position = Vector2( 556, 1159 )

[node name="Grass" parent="." instance=ExtResource( 9 )]
position = Vector2( 1527, 1030 )

[node name="Grass2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1721, 991 )

[node name="Grass3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1769, 1197 )

[node name="Grass4" parent="." instance=ExtResource( 9 )]
position = Vector2( 1557, 1257 )

[node name="WorldArea" type="Area2D" parent="."]
position = Vector2( 1026, 973 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldArea"]
position = Vector2( 1, 0 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyArea1" type="Area2D" parent="."]
position = Vector2( 576, 1774 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea1"]
modulate = Color( 0.113725, 0, 0.00784314, 1 )
position = Vector2( 0, -1 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyArea2" type="Area2D" parent="."]
position = Vector2( 1503, 1772 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea2"]
modulate = Color( 0.27451, 0.662745, 0.00784314, 1 )
position = Vector2( 0, 2 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyArea3" type="Area2D" parent="."]
modulate = Color( 0.352941, 0.0196078, 1, 1 )
position = Vector2( 1031, 163 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea3"]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="HouseArea" type="Area2D" parent="."]
position = Vector2( 12742, 2154 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseArea"]
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 12742, 2467 )
collision_layer = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
modulate = Color( 0.266667, 0.0705882, 0.615686, 1 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
